--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/VitorLuizC/nike-store#readme",
   "devDependencies": {
     "css-loader": "^0.28.3",
+    "file-loader": "^0.11.1",
+    "image-webpack-loader": "^3.3.1",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
