--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "css-loader": "^0.28.3",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
