--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config build --display-error-details",
-    "build": "webpack -p --env production --config build"
+    "dev": "webpack-dev-server --hot --open --config build",
+    "build": "webpack -p --env production --config build --progress"
   },
   "repository": {
     "type": "git",
@@ -24,25 +24,27 @@
   "homepage": "https://github.com/VitorLuizC/nike-store#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "cssnano": "^3.10.0",
-    "poststylus": "^0.2.3",
-    "stylus-loader": "^3.0.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "css-loader": "^0.28.3",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
+    "poststylus": "^0.2.3",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "uuid": "^3.0.1",
     "vue": "^2.3.3",
     "vuex": "^2.3.1"
   }
