--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-runtime": "^6.23.0",
     "uuid": "^3.0.1",
     "vue": "^2.3.3",
+    "vue-carousel": "^0.6.4",
     "vuex": "^2.3.1"
   }
 }
