--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "uuid": "^3.0.1",
     "vue": "^2.3.3",
     "vue-carousel": "^0.6.4",
+    "vue-parallaxy": "^1.0.3",
     "vuex": "^2.3.1"
   }
 }
