--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,6 @@
     ]
   ],
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-runtime"
+    "transform-object-rest-spread"
   ]
 }
