--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "css-loader": "^0.28.3",
     "cssnano": "^3.10.0",
@@ -45,7 +44,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "uuid": "^3.0.1",
     "vue": "^2.3.3",
     "vue-carousel": "^0.6.4",
